add brand list and more styles

--- a/index.html
+++ b/index.html
@@ -17,6 +17,18 @@
         Emporium is a place to experience the world's finest and rarest guitars.
       </p>
     </div>
+    <div id="listHead">
+      <p>
+        We specialize in the following brands:
+      </p>
+    </div>
+    <ul id="brandList">
+      <li>Fender</li>
+      <li>Gibson</li>
+      <li>Gretsch</li>
+      <li>Vintage</li>
+      <li>Guild</li>
+    </ul>
     <div id="gallery">
       <div  id="image1">
         <img class="image" src="./img/guild.jpg" alt="a guild guitar"/>
