centered brand ul. add hover effects.

--- a/index.html
+++ b/index.html
@@ -22,13 +22,15 @@
         We specialize in the following brands:
       </p>
     </div>
-    <ul id="brandList">
-      <li>Fender</li>
-      <li>Gibson</li>
-      <li>Gretsch</li>
-      <li>Vintage</li>
-      <li>Guild</li>
-    </ul>
+    <div class="table">
+      <ul id="brandList">
+        <li>Fender</li>
+        <li>Gibson</li>
+        <li>Gretsch</li>
+        <li>Vintage</li>
+        <li>Guild</li>
+      </ul>
+    </div>
     <div id="gallery">
       <div  id="image1">
         <img class="image" src="./img/guild.jpg" alt="a guild guitar"/>
