--- a/index.html
+++ b/index.html
@@ -52,8 +52,15 @@
       </div>
     </div>
     <div id="form">
-      <label>Join our newsletter! </label>
+      <h4>Join our newsletter! </h4>
+      <div>
+      <label for="">Name:</label>
       <input type="text">
+    </div>
+    <div>
+      <label for="">Email:</label>
+      <input type="text">
+    </div>
     </div>
     <div id="shipHeader">
       <label >Shipping Info</label>
